--- a/coolsite/women/templates/women/base.html
+++ b/coolsite/women/templates/women/base.html
@@ -14,12 +14,12 @@
 {% block mainmenu %}
 		<div class="header">
 			<ul id="mainmenu" class="mainmenu">
-			<li class="logo"><a href="#"><div class="logo"></div></a></li>
+			<li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
 {% for m in menu %}
 	{% if not forloop.last %}
-			<li><a href="#">{{m.title}}</a></li>
+			<li><a href="{% url m.url_name %}">{{m.title}}</a></li>
 	{% else %}
-			<li class="last"><a href="#">{{m.title}}</a></li>
+			<li class="last"><a href="{% url m.url_name %}">{{m.title}}</a></li>
 	{% endif %}
 {% endfor %}
 			</ul>
@@ -34,7 +34,7 @@
 	<td valign="top" class="left-chapters">
 	<ul id="leftchapters">
 		<li class="selected">Все категории</li>
-		<li><a href="#">Актрисы</a></li>
+		<li><a href="{% url 'home' %}">Актрисы</a></li>
 		<li><a href="#">Певицы</a></li>
 		<li><a href="#">Спортсменки</a></li>
 		<li class="share">
