--- a/coolsite/women/templates/women/index.html
+++ b/coolsite/women/templates/women/index.html
@@ -7,7 +7,11 @@
                 <p class="first">Категория: {{ p.cat }}</p>
                 <p class="last">Дата: {{ p.time_update|date:"d-m-Y H:i:s" }}</p>
             </div>
-            <li><h2>{{ p.title }}</h2>
+            <li>
+                {% if p.photo %}
+                    <p><img class="img-article-left thumb" src="{{ p.photo.url }}"></p>
+                {% endif %}
+                <h2>{{ p.title }}</h2>
                 {% autoescape on %}
                     {{ p.content|linebreaks|truncatewords:50 }}
                 {% endautoescape %}
