--- a/coolsite/women/templates/women/base.html
+++ b/coolsite/women/templates/women/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load women_tags %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -35,6 +37,9 @@
                 <tr>
                     <!-- Sidebar слева -->
                     <td valign="top" class="left-chapters">
+
+{#                        {% getcats 2 %}#}
+
                         <ul id="leftchapters">
                             {% if cat_selected == 0 %}
                                 <li class="selected">Все категории</li>
@@ -42,13 +47,9 @@
                                 <li><a href="{% url 'home' %}">Все категории</a></li>
                             {% endif %}
 
-                            {% for c in cats %}
-                                {% if c.pk == cat_selected %}
-                                    <li class="selected">{{ c.name }}</li>
-                                {% else %}
-                                    <li><a href="{{ c.get_absolute_url }}">{{ c.name }}</a></li>
-                                {% endif %}
-                            {% endfor %}
+{#                            {% show_categories %}#}
+                        {% show_categories 'name' cat_selected %}
+
                             <li class="share">
                                 <p>Наш канал</p>
                                 <a class="share-yt"
