--- a/coolsite/women/templates/women/base.html
+++ b/coolsite/women/templates/women/base.html
@@ -38,7 +38,7 @@
                     <!-- Sidebar слева -->
                     <td valign="top" class="left-chapters">
 
-{#                        {% getcats 2 %}#}
+                        {#                        {% getcats 2 %}#}
 
                         <ul id="leftchapters">
                             {% if cat_selected == 0 %}
@@ -47,9 +47,19 @@
                                 <li><a href="{% url 'home' %}">Все категории</a></li>
                             {% endif %}
 
-{#                            {% show_categories %}#}
+                            {#                            {% show_categories %}#}
 
-                            {% show_categories 'name' cat_selected %}
+                            {#                            {% show_categories 'name' cat_selected %}#}
+
+                            {% for c in cats %}
+                                {% if c.women__count > 0 %}
+                                    {% if c.pk == cat_selected %}
+                                        <li class="selected">{{ c.name }}</li>
+                                    {% else %}
+                                        <li><a href="{{ c.get_absolute_url }}">{{ c.name }}</a></li>
+                                    {% endif %}
+                                {% endif %}
+                            {% endfor %}
 
                             <li class="share">
                                 <p>Наш канал</p>
