--- a/coolsite/women/templates/women/base.html
+++ b/coolsite/women/templates/women/base.html
@@ -53,21 +53,18 @@
             <table class="table-content" border=0 cellpadding="0" cellspacing="0">
                 <tr>
                     <!-- Sidebar слева -->
+{#                {% load cache %}#}
                     <td valign="top" class="left-chapters">
-
                         {#                        {% getcats 2 %}#}
-
                         <ul id="leftchapters">
+{#                        {% cache 60 sidebar %}#}
                             {% if cat_selected == 0 %}
                                 <li class="selected">Все категории</li>
                             {% else %}
                                 <li><a href="{% url 'home' %}">Все категории</a></li>
                             {% endif %}
-
                             {#                            {% show_categories %}#}
-
                             {#                            {% show_categories 'name' cat_selected %}#}
-
                             {% for c in cats %}
                                 {% if c.women__count > 0 %}
                                     {% if c.pk == cat_selected %}
@@ -77,7 +74,7 @@
                                     {% endif %}
                                 {% endif %}
                             {% endfor %}
-
+{#                        {% endcache %}#}
                             <li class="share">
                                 <p>Наш канал</p>
                                 <a class="share-yt"
