--- a/women/templates/women/base.html
+++ b/women/templates/women/base.html
@@ -16,28 +16,20 @@
         <td valign=top>
             {% block mainmenu %}
                 <div class="header">
-                    {#                    <ul id="mainmenu" class="mainmenu">#}
-                    {#                        <li class="logo"><a href="{% url 'home' %}">#}
-                    {#                            <div class="logo"></div>#}
-                    {#                        </a></li>#}
-                    {#                        {% for m in menu %}#}
-                    {#                            {% if not forloop.last %}#}
-                    {#                                <li><a href="{% url m.url_name %}">{{ m.title }}</a></li>#}
-                    {#                            {% else %}#}
-                    {#                                <li class="last"><a href="{% url m.url_name %}">{{ m.title }}</a></li>#}
-                    {#                            {% endif %}#}
-                    {#                        {% endfor %}#}
-                    {#                    </ul>#}
-
                     <ul id="mainmenu" class="mainmenu">
-                        <li class="logo"><a href="{% url 'home' %}">
-                            <div class="logo"></div>
-                        </a></li>
+                        <li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
+
                         {% for m in menu %}
-                            <li><a href="{% url m.url_name %}">{{ m.title }}</a></li>
+                                <li><a href="{% url m.url_name %}">{{ m.title }}</a></li>
                         {% endfor %}
+
+                         {% if request.user.is_authenticated %}
+                            <li> <a href="{% url 'favourite_list' %}">Избранное</a></li>
+
+
+
                         <li class="last">
-                            {% if request.user.is_authenticated %}
+
                                 <li class="last"> {{ user.username }} | <a href="{% url 'logout' %}">Выйти</a></li>
                             {% else %}
                                 <li class="last"><a href="{% url 'register' %}">Регистрация</a> | <a
@@ -138,8 +130,7 @@
     <tr>
         <td valign=top>
             <div id="footer">
-                <p>&copy; 2021 Частичное или полное копирование информации с данного сайта для распространения на других
-                    ресурсах, в том числе и бумажных, строго запрещено.</p>
+                <p>&copy; 2021 </p>
             </div>
         </td>
     </tr>
